# stock_market_prediction

./: .env  .gitignore  CHANGELOG.md  README.md  UPDATE_LOG.md  debug_preprocess.py  index.html  package.json  pnpm-lock.yaml  requirements.txt  run.py  run_tests.py  tailwind.config.js  test_api_settings.py  test_fixes.py  test_gui_markdown.py  test_import.py  test_markdown_render.py  test_multi_sources.py  test_stooq.py  test_yfinance.py  test_yfinance_direct.py
.github/workflows/: release.yml
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/python/: predict_arima.py  predict_lstm.py  requirements.txt
src-tauri/src/: lib.rs  main.rs
src/components/: AnalysisPanel.tsx  Header.tsx  PredictionPanel.tsx  StockChart.tsx
src/types/: index.ts
stock_market_prediction/: .env.example  README.md  UPDATE_LOG.md  __init__.py  main.py  requirements.txt  setup.py  utils.py
stock_market_prediction.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
stock_market_prediction/agents/: llm_agent.py
stock_market_prediction/stock_market_prediction/: __init__.py  main.py  utils.py
stock_market_prediction/stock_market_prediction.egg-info/: PKG-INFO  entry_points.txt  requires.txt
stock_market_prediction/tests/: test_stock_predictor.py  test_utils.py
stock_market_prediction/tools/: __init__.py
tests/: test_utils.py
