[package]
name = "stock-predictor"
version = "1.0.0"
description = "Stock Market Prediction Tool"
authors = ["zouyuanqing"]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "stock_predictor_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
